all: remove device-specific code for controlling the in-progress activity indicator because it is the same across all devices; common: fix bug with URL query string parsing (was leaving in #s), delay the display of the in-progress activity indicator by 1 second to reduce chance of flicker and DOM issues; android: adjust size of blink-generated Google Maps to assist with scrolling

--- a/public_html/_R_/android/1/android.css
+++ b/public_html/_R_/android/1/android.css
@@ -20,6 +20,11 @@ button, input[type=submit], input[type=button] {
 
 button[disabled] { opacity: 0.5; }
 
+.googlemap {
+	width: 90%;
+	height: 360px;
+}
+
 .bForm-results { font-size: smaller; }
 
 .bForm-label, .bForm-value { font-size: medium; }
